--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "license": "ISC",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.3",
-    "axios": "^1.9.0"
+    "axios": "^1.9.0",
+    "dotenv": "^17.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.15.18",
